--- a/demo/demo.html
+++ b/demo/demo.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen, projection" />
 	    <!-- Javascripts -->
     <script language="javascript" type="text/javascript" src="js/jquery.js"></script>
-    <script language="javascript" type="text/javascript" src="js/countdowntimer1.0.min.js"></script>
+    <script language="javascript" type="text/javascript" src="js/countdowntimer1.0.js"></script>
     <script>
 		$(document).ready(function(){
 			// make a date to countdown. todays date 10years and 2sec!
